refactor: 完成ClusterServiceInstanceService架构重构 - 第4个Service完成